css/styles.css
body
{
    overflow-x : hidden;
}

#business_body
{
    padding : 50px 0px 0px 0px;
    z-index : 0;
}

#navigation_bar
{
    background-color : rgba(0,0,0,0.4);
    color : white;
    border-bottom : 1px solid grey;
}

#navigation_bar a
{
    color : white !important;
}

#navigation_bar .fa-bars
{
    color : white !important;
}

#navigation_bar.scrolled
{
    background-color: #fff !important;
    color : black;
    transition: background-color 200ms linear;
}

#navigation_bar.scrolled a
{
    color : black !important;
}

#navigation_bar.scrolled .fa-bars
{
    color : black !important;
}

#home_header
{
    background-image : url(../images/home_header.jpg);
    background-size : cover;
    color : floralwhite;
}

#get_started
{
    background-color : rgba(0,0,0,0.4);
}

a.card, a.card:hover
{
    text-decoration : none;
    color : black;
}

.ribbon
{
    margin: 0;
    padding: 0;
    background: green;
    color:white;
    font-size : 90%;
    text-align:center;
    width : 100px;
    position: absolute;
    z-index : 5;
    top:-15px;
    right:-45px;
    transform: rotate(45deg);
    transform-origin: top left;
    clip-path : polygon(20px 0, 80px 0, 100% 100%, 0 100%);
}

.carousel-control-prev
{
    background-color : grey;
    left : 0;
    height : 10%;
    top : 45%;
    opacity : 1;
    width : 5%;
}

.carousel-control-prev:hover
{
    opacity : 1;
    background-color : black;
}

.carousel-control-next
{
    background-color : grey;
    right : 0;
    height : 10%;
    top : 45%;
    opacity : 1;
    width : 5%;
}

.carousel-control-next:hover
{
    opacity : 1;
    background-color : black;
}

.carousel-item
{
    height : 385px;
}

a.card
{
    border : 1px solid lightgrey;
    margin : 2px 2px 2px 2px;
    box-shadow : 1px 1px 2px lightgrey;
    font-size : 14px;
}

a.card:hover
{
    box-shadow : 0px 0px 5px grey;
}

.card_description
{
    height : 100px;
    overflow : hidden;
    text-overflow : ellipsis;
    font-size : 13px;
}

img
{
    width : 100%;
}

.card_table
{
    font-size : 13px;
}

.profile_info
{
    white-space : nowrap;
    overflow : hidden;
    text-overflow : ellipsis;
}

.profile_data
{
    white-space : nowrap;
    overflow : hidden;
    text-overflow : ellipsis;
}

.profile_name
{
    font-size : 16px;
}

.profile_name_sec
{
    font-size : 14px;
}

.tab-content {
    border-left: 1px solid grey;
    border-right: 1px solid grey;
    border-bottom: 1px solid grey;
    background-color : #f8f8f8;
    padding: 10px;
}

.foot_header
{
    color : #383838;
    font-size : 14px;
}

.foot_link
{
    color : grey !important;
    font-size : 12px;
}

.list-inline-item
{
    font-size : 12px;
}

.btn-xs
{
    font-size : 10px;
}

.fixed_right_button
{
    z-index : 10;
    transform : rotate(270deg);
    -webkit-transform : rotate(270deg);
    position : fixed;
    right : -30px;
    bottom : 30vh;
}

.help_input
{
    width : 100%;
    border : 1px solid lightgrey;
    border-radius : 5px;
}

.news_pic
{
    height : 100px;
    background-size : 100% 100%;
    box-shadow : 0px 5px 10px lightgrey;
}

.news_pic:hover
{
    box-shadow : 0px 5px 10px lightblue;
}

#yahoo
{
    background-image : url(../images/yahoo.jpg);
}

#yourstory
{
    background-image : url(../images/yourstory.jpg);
}

#silicon
{
    background-image : url(../images/silicon.jpg);
}

#economic
{
    background-image : url(../images/economic.jpg);
}

#mintasia
{
    background-image : url(../images/mintasia.jpg);
}

#entrepreneur
{
    background-image : url(../images/entrepreneur.jpg);
}

.no_border_no_bg
{
    border : none;
    background : none;
}

.faq_q
{
    text-decoration : none !important;
}

.faq_a
{
    font-size : 14px;
}

.example_link
{
    display : block;
    width : 100%;
    height : 100%;
}

@media (max-width : 450px)
{
    .card_description
    {
        height : 80px;
    }

    .fixed_right_button
    {
        right : -15px;
    }
}

@media (max-width : 1000px)
{
    .profile_name
    {
        font-size : 14px;
    }

    .profile_name_sec
    {
        font-size : 12px;
    }
    
    body
    {
        padding-bottom : 50px;
    }
}

@media only screen and (min-width: 768px) { 
    .brnodisplay {
        display: none;
    }
}

@media (min-width : 1000px)
{
    #side_panel
    {
        display : block !important;
    }
}

